syntax = "proto3";

package cline;

import "common.proto";

service CheckpointsService {
  rpc checkpointDiff(Int64Request) returns (Empty);
  rpc checkpointRestore(CheckpointRestoreRequest) returns (Empty);
}

message CheckpointRestoreRequest {
  int64 number = 1;
  string restore_type = 2;
  optional int64 offset = 3;
}
