syntax = "proto3";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

import "common.proto";

// Service for file-related operations
service FileService {
  // Opens a file in the editor
  rpc openFile(StringRequest) returns (Empty);
  
  // Opens an image in the system viewer
  rpc openImage(StringRequest) returns (Empty);
  
  // Checks if a URL is an image
  rpc checkIsImageUrl(StringRequest) returns (IsImageUrlResult);
}

// Response for checkIsImageUrl method
message IsImageUrlResult {
  bool is_image = 1;
  string url = 2;
}
